--- a/MarkMe_Frontend/Dashboard/css/style.css
+++ b/MarkMe_Frontend/Dashboard/css/style.css
@@ -1,7 +1,7 @@
 body {
 	margin:0px;
 	padding: 0px;
-	background-color:#538562;
+	background-color:#022534;
 	overflow: hidden;
 	font-family: system-ui;
 }
@@ -16,7 +16,8 @@ body {
   margin-bottom: 30px;
 }
 .logo span{
-	color: #f7be45;
+	color: #a87912;
+  border-radius: 30px;
 }
 .sidenav {
   height: 100%;
@@ -25,22 +26,24 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #30523a;
+  background-color: #022534;
   overflow: hidden;
   transition: 0.5s;
   padding-top: 30px;
+  border-right: 2px;
+  border-color: #ddd;
 }
 .sidenav a {
   padding: 15px 8px 15px 32px;
   text-decoration: none;
   font-size: 20px;
-  color: #818181;
+  color: #a0bacc;
   display: block;
   transition: 0.3s;
 }
 .sidenav a:hover {
   color: #f1f1f1;
-  background-color:#1b203d;
+  background-color:#05384e;
 }
 .sidenav{
   position: absolute;
@@ -90,7 +93,7 @@ body {
 .box{
 	width: 85%;
 	height: 100px;
-	background-color: #272c4a;
+	background-color: #05384e;
 	margin-left: 10px;
 	padding:10px;
 }
@@ -140,9 +143,9 @@ body {
 }
 .box-8, .box-4{
 	width: 95%;
-	background-color: #272c4a;
+	background-color: #05384e;
 	height: 330px;
-	
+	border-radius: 30px;
 }
 .nav2{
 	display: none;
@@ -166,37 +169,11 @@ td, th {
 
 .addCourse {
   color: #fff5de;
-  background-color: #f7be45;
+  background-color: #a87912;
   padding: 10px 20px;
   border: none;
-}
-
-.circle-wrap {
-  margin: 50px auto;
-  width: 150px;
-  height: 150px;
-  background: #e6e2e7;
-  border-radius: 50%;
-}
-.circle-wrap .circle .mask,
-.circle-wrap .circle .fill {
-  width: 150px;
-  height: 150px;
-  position: absolute;
-  border-radius: 50%;
-}
-.circle-wrap .circle .mask {
-  clip: rect(0px, 150px, 150px, 75px);
-}
-
-.circle-wrap .circle .mask .fill {
-  clip: rect(0px, 75px, 150px, 0px);
-  background-color: #f7403b;
-}
-.circle-wrap .circle .mask.full,
-.circle-wrap .circle .fill {
-  animation: fill ease-in-out 3s;
-  transform: rotate(126deg);
+  border-radius: 30px;
+  margin-top: 10px;
 }
 
 @keyframes fill {
@@ -207,20 +184,7 @@ td, th {
     transform: rotate(126deg);
   }
 }
-.circle-wrap .inside-circle {
-  width: 130px;
-  height: 130px;
-  border-radius: 50%;
-  background: #fff;
-  line-height: 130px;
-  text-align: center;
-  margin-top: 10px;
-  margin-left: 10px;
-  position: absolute;
-  z-index: 100;
-  font-weight: 700;
-  font-size: 2em;
-}
+
 .modal{
   display: none;
 }
@@ -251,10 +215,11 @@ form button{
   position: absolute;
   top: 300px;
   right: 20px;
-  background-color: #30523a;
+  background-color: #a87912;
   height: 300px;
   width: 400px;
   animation: slide .5s;
+  border-radius: 30px;
 }
 .mark input{
   border: none;
@@ -266,8 +231,9 @@ form button{
   padding: 10px;
   font-size: 1.2rem;
   border: none;
-  background-color: #f7be45;
+  background-color: #05384e;
   margin-top: 40px;
+  border-radius: 30px;
 }
 @keyframes slide{
   from{
