--- a/MarkMe_Frontend/style.css
+++ b/MarkMe_Frontend/style.css
@@ -1,14 +1,63 @@
 /* Default Styles */
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
 
-h1, h2, h3 {
-    margin-top: 0;
+h1,
+h2,
+h3 {
+  margin-top: 0;
 }
 
 a {
-    color: #000;
+  color: #000;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+/* Landing Page Styles */
+
+header {
+  background-image: url("bg.jpg");
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+nav {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-left: 20px;
+}
+
+h1 {
+  font-size: 5rem;
+  margin-bottom: 20px;
+  text-align: center;
+  text-shadow: 2px 2px #f2f2f2;
+  color: #39a034;
+}
+
+p {
+  font-size: 2rem;
+  margin-bottom: 40px;
+  text-align: center;
+  text-shadow: 2px 2px #f2f2f2;
+  color: #fff;
+}
