--- a/MarkMe_Backend/MarkMeApp/templates/dashboard.html
+++ b/MarkMe_Backend/MarkMeApp/templates/dashboard.html
@@ -15,7 +15,7 @@
   <a href="attendance"class="icon-a"><i class="fa fa-list icons"></i> &nbsp;&nbsp;Attendance</a>
   <a href="#"class="icon-a"><i class="fa fa-flag icons"></i> &nbsp;&nbsp;Report</a>
   <a href="#"class="icon-a"><i class="fa fa-cog icons"></i> &nbsp;&nbsp;Settings</a>
-  <a href="#"class="icon-a"><i class="fa fa-sign-out icons"></i> &nbsp;&nbsp;Logout</a>
+  <a href="logout"class="icon-a"><i class="fa fa-sign-out icons"></i> &nbsp;&nbsp;Logout</a>
 </div>
 <div id="main">
 
@@ -29,7 +29,7 @@
 	<div class="profile">
 
 		<img src="../static/images/user.png" class="pro-img" />
-		<p>Leomanuel Ola<span>Sofware Engineer</span></p>
+		<p>{{ user }}<span>{{ user.unique_id }}</span></p>
 	</div>
 </div>
 	<div class="clearfix"></div>
