altered the model

--- a/MarkMe_Backend/MarkMeApp/templates/dashboard.html
+++ b/MarkMe_Backend/MarkMeApp/templates/dashboard.html
@@ -29,7 +29,7 @@
 	<div class="profile">
 
 		<img src="../static/images/user.png" class="pro-img" />
-		<p>{{ user }}<span>{{ user.unique_id }}</span></p>
+		<p>{{ user }}<span>{{ id }}</span></p>
 	</div>
 </div>
 	<div class="clearfix"></div>
