--- a/MarkMe_Backend/MarkMeApp/templates/GuardiansSignUp.html
+++ b/MarkMe_Backend/MarkMeApp/templates/GuardiansSignUp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup - MarkMe</title>
+    <title>Guardian - Signup</title>
     <link rel="stylesheet" href="../static/css/signup.css">
 </head>
 <body>
