--- a/MarkMe_Backend/MarkMeApp/templates/StudentSignUp.html
+++ b/MarkMe_Backend/MarkMeApp/templates/StudentSignUp.html
@@ -12,27 +12,28 @@
     </header>
 
     <main>
-        <form action="#">
-            <label for="name">First Name:</label>
-            <input type="text" id="name" name="name" required>
+        <form method="POST">
+            {% csrf_token %}
+            {% load widget_tweaks %}
 
-            <label for="name">Last Name:</label>
-            <input type="text" id="name" name="name" required>
+            <label for="name">Full Name:</label>
+            {% render_field user.name id="name" type="text" %}
 
+           
             <label for="lastname">Username:</label>
-            <input type="text" id="name" name="name" required>
+            {% render_field user.username id="name" type="text" %}
 
             <label for="email">Email Address:</label>
-            <input type="email" id="email" name="email" required>
+            {% render_field user.email id="email" type="email" %}
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
+            {% render_field user.password id="password" type="password" %}
 
             <label for="confirm_password">Confirm Password:</label>
-            <input type="password" id="confirm_password" name="confirm_password" required>
+            {% render_field user.password id="password" type="password" %}
 
             <label for="name">Institution:</label>
-            <input type="text" id="name" name="institution" required>
+            {% render_field user.institution id="name" type="text" %}
 
             <input type="submit" value="Create Account">
         </form>
