--- a/MarkMe_Backend/MarkMeApp/templates/attendance.html
+++ b/MarkMe_Backend/MarkMeApp/templates/attendance.html
@@ -1,7 +1,7 @@
 <!Doctype HTML>
 <html>
 <head>
-	<title></title>
+	<title>Attendance - Markme</title>
 	<link rel="stylesheet" href="../static/css/attendance.css" type="text/css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
