--- a/MarkMe_Backend/MarkMeApp/templates/login.html
+++ b/MarkMe_Backend/MarkMeApp/templates/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/css/signup.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Login to Your MarkMe Account</h1>
     </header>
 
@@ -33,7 +33,9 @@
             <input type="submit" value="Login">
         </form>
 
-        <p>Don't have an account? <a href="signup.html">Sign up here.</a></p>
+        <p>Don't have an account?</p>
+
+        <button class="signup">Sign up here.</button>
     </main>
 
     <footer>
@@ -45,5 +47,7 @@
             <li><a href="#">Instagram</a></li>
         </ul>
     </footer>
+
+<script src="/MarkMe_Backend/MarkMeApp/static/js/script.js"></script>
 </body>
 </html>
