--- a/MarkMe_Backend/MarkMeApp/static/css/signup.css
+++ b/MarkMe_Backend/MarkMeApp/static/css/signup.css
@@ -23,8 +23,8 @@ ul {
 
 /* Signup Page Styles */
 
-header {
-    background-color: #f2f2f2;
+.header {
+    background-color: #1885b4;
     padding: 20px;
 }
 
@@ -49,6 +49,7 @@ input[type="text"], input[type="email"], input[type="password"] {
     border: 1px solid rgb(188, 188, 188);
     border-radius: 5px;
     margin-bottom: 20px;
+    background-color: #00796b;
 }
 
 input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus{
