--- a/MarkMe_Backend/MarkMeApp/static/css/style.css
+++ b/MarkMe_Backend/MarkMeApp/static/css/style.css
@@ -226,9 +226,11 @@ input{
   margin-left: 5%;
   border-radius: 20px;
   border: none;
+  padding-left: 20px;
+  font-size: 1.4em;
 }
 input::placeholder{
-  font-size: 1.4em;
+  font-size: 1em;
   margin-left: 20px;
 }
 form button{
@@ -240,7 +242,6 @@ form button{
   border: none;
   font-size: 1rem;
   border-radius: 10px;
-
 }
 .mark{
   display: none;
