--- a/MarkMe_Backend/MarkMeApp/templates/index.html
+++ b/MarkMe_Backend/MarkMeApp/templates/index.html
@@ -1,7 +1,7 @@
 <!Doctype HTML>
 <html>
 <head>
-	<title>Dashboard - Markme</title>
+	<title></title>
 	<link rel="stylesheet" href="../static/css/style.css" type="text/css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -10,12 +10,12 @@
 <body>
 	
 	<div id="mySidenav" class="sidenav">
-  <p class="logo"><span><i class="fa fa-medium icons" style="margin-right: 18px;"></i></span>arkMe</p>
-  <a href="dashboard" class="icon-a"><i class="fa fa-dashboard icons"></i> &nbsp;&nbsp;Dashboard</a>
-  <a href="attendance"class="icon-a"><i class="fa fa-list icons"></i> &nbsp;&nbsp;Attendance</a>
+	<p class="logo"><span><i class="fa fa-medium icons"></i></span> arkMe</p>
+  <a href="index.html" class="icon-a"><i class="fa fa-dashboard icons"></i> &nbsp;&nbsp;Dashboard</a>
+  <a href="attendance.html"class="icon-a"><i class="fa fa-list icons"></i> &nbsp;&nbsp;Attendance</a>
   <a href="#"class="icon-a"><i class="fa fa-flag icons"></i> &nbsp;&nbsp;Report</a>
   <a href="createInstitution" class="icon-a"><i class="fa fa-plus icons"></i> &nbsp;&nbsp;Create Institute</a>
-  <a href="logout"class="icon-a"><i class="fa fa-sign-out icons"></i> &nbsp;&nbsp;Logout</a>
+  <a href="#"class="icon-a"><i class="fa fa-sign-out icons"></i> &nbsp;&nbsp;Logout</a>
 </div>
 <div id="main">
 
@@ -29,12 +29,11 @@
 	<div class="profile">
 
 		<img src="../static/images/user.png" class="pro-img" />
-		<p>{{ user }}<span>{{ id }}</span></p>
+		<p>Leomanuel Ola<span>Sofware Engineer</span></p>
 	</div>
 </div>
 	<div class="clearfix"></div>
 	<br/><br/>
-
 	<div class="col-div-8">
 		<div class="box-8">
 		<div class="content-box">
@@ -43,8 +42,7 @@
         Add courses
       </button>
 			<br/>
-    
-  
+      
   <div class="table" id="table-scroll">
     <table id="form">
       <tr>
@@ -52,7 +50,6 @@
         <th>Session</th>
         <th>Action</th>
       </tr>
-
       {% for course in registeredCourses %}  
       <tr>
         <td>{{ course.name}}</td>
@@ -67,15 +64,15 @@
       {% endfor %}
     </table>
   </div>
-    </div>
-	</div>
+</div>
+		</div>
 	</div>
 	</div>
 
 	<div class="col-div-4">
 		<div class="box-4 modal" id="modal">
 		  <div class="content-box">
-        <form method="POST">
+       <form method="POST">
           {% csrf_token %}
           {% load widget_tweaks %}
 
@@ -94,18 +91,10 @@
 <div class="mark slide" id="mark">
     <div id="header"></div>
     <p onclick="closeModal()">X</p>
-    <form method="POST">
-      {% csrf_token %}
-      {% load widget_tweaks %}
-
-      {% render_field attendance.course_title id="title" type="text" placeholder="  Course Title" %}
-      {% render_field attendance.academic_session id="session" type="text" placeholder=" Academic Session" %}
-      {% render_field attendance.ID id="session" type="text" placeholder=" Academic Session" %}
-      <input type="submit" value="Submit">
-    </form>
-    <!-- <input type="text" id="input" placeholder="     Student ID">
-    <input type="text" id="input"> -->
+    <input type="text" id="input" placeholder="     Student ID">
+    <input type="text" id="input">
     <button onclick="closeModal()" id="close">Mark</button>
+  </div>
 	<div class="clearfix"></div>
 </div>
 
