added more functionality to the view.py file and also so conditional statement for the dashboard

--- a/MarkMe_Backend/MarkMeApp/templates/StudentSignUp.html
+++ b/MarkMe_Backend/MarkMeApp/templates/StudentSignUp.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/css/signup.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Create a Student MarkMe Account</h1>
     </header>
 
@@ -38,7 +38,7 @@
             <input type="submit" value="Create Account">
         </form>
 
-        <p>Already have an account? <a href="login.html">Login here.</a></p>
+        <p>Already have an account? <a login="login" class="signup" style="color: #055e39;">Login here</a></p>
     </main>
 
     <footer>
