--- a/MarkMe_Backend/MarkMeApp/templates/GuardiansSignUp.html
+++ b/MarkMe_Backend/MarkMeApp/templates/GuardiansSignUp.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/css/signup.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Create a Guardian MarkMe Account</h1>
     </header>
 
@@ -31,7 +31,7 @@
             <input type="submit" value="Create Account">
         </form>
 
-        <p>Already have an account? <a href="login.html">Login here.</a></p>
+        <p>Already have an account? <a href="login" class="signup" style="color: #055e39;">Login here.</a></p>
     </main>
 
     <footer>
