--- a/MarkMe_Backend/MarkMeApp/templates/login.html
+++ b/MarkMe_Backend/MarkMeApp/templates/login.html
@@ -33,9 +33,8 @@
             <input type="submit" value="Login">
         </form>
 
-        <p>Don't have an account?</p>
+        <p>Don't have an account? <a href="/" class="signup" style="color: #055e39;">Sign up here.</a></p>
 
-        <button class="signup">Sign up here.</button>
     </main>
 
     <footer>
