--- a/MarkMe_Backend/MarkMeApp/templates/attendance.html
+++ b/MarkMe_Backend/MarkMeApp/templates/attendance.html
@@ -42,12 +42,24 @@
     <div class="table" id="table-scroll">
         <table id="table">
           <tr>
+            {% if student == True %}
+            <th>Student</th>
+            {% endif %}
+            {% if instructor == True %}
+            <th>Instructor</th>
+            {% endif %}
             <th>Course</th>
-            <th>Date</th>
+            <th>Date Signed</th>
             <!-- <th>View</th> -->
           </tr>
           {% for attendance in attendances %}
           <tr>
+            {% if instructor == True %}
+            <td>{{ attendance.student }}</td>
+            {% endif %}
+            {% if student == True %}
+            <td>{{ attendance.instructor }}</td>
+            {% endif %}
             <td>{{ attendance.course.name }}</td>
             <td>{{ attendance.date_signed }}</td>
             <!-- <td>
