--- a/MarkMe_Backend/MarkMeApp/templates/InstitutionReg.html
+++ b/MarkMe_Backend/MarkMeApp/templates/InstitutionReg.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/css/signup.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Create an Institution MarkMe Account</h1>
     </header>
 
