--- a/MarkMe_Backend/MarkMeApp/templates/InstructorSignUp.html
+++ b/MarkMe_Backend/MarkMeApp/templates/InstructorSignUp.html
@@ -38,7 +38,7 @@
             <input type="submit" value="Create Account">
         </form>
 
-        <p>Already have an account? <a login="login" class="signup" style="color: #055e39;">Login here.</a></p>
+        <p>Already have an account? <a href="login" class="signup" style="color: #055e39;">Login here.</a></p>
     </main>
 
     <footer>
